add_library(nebula_core STATIC
    core/Application.cpp
    core/Window.cpp
    core/Input.cpp
    core/Event.cpp
    core/Time.cpp
    core/Logger.cpp
    core/Config.cpp
    core/Engine.cpp
    core/GameLoop.cpp
    core/Platform.cpp
    core/Profiler.cpp
    core/Settings.cpp
    graphics/Renderer.cpp
    graphics/SpriteBatch.cpp
    graphics/TextureManager.cpp
    graphics/Shader.cpp
    graphics/ShaderManager.cpp
    graphics/Camera.cpp
    graphics/CameraController.cpp
    graphics/Animation.cpp
    graphics/AnimationManager.cpp
    graphics/ParticleSystem.cpp
    graphics/ParticleEmitter.cpp
    graphics/PostProcess.cpp
    graphics/Font.cpp
    graphics/TextRenderer.cpp
    graphics/Color.cpp
    graphics/Vertex.cpp
    graphics/RenderTarget.cpp
    graphics/RenderTexture.cpp
    graphics/BlendMode.cpp
    graphics/Viewport.cpp
    audio/AudioEngine.cpp
    audio/Sound.cpp
    audio/SoundManager.cpp
    audio/MusicPlayer.cpp
    audio/AudioEffect.cpp
    audio/AudioListener.cpp
    audio/AudioBuffer.cpp
    physics/PhysicsWorld.cpp
    physics/CollisionDetector.cpp
    physics/RigidBody.cpp
    physics/Collider.cpp
    physics/Joint.cpp
    physics/Raycast.cpp
    physics/PhysicsMaterial.cpp
    physics/Broadphase.cpp
    physics/Narrowphase.cpp
    ecs/Entity.cpp
    ecs/EntityManager.cpp
    ecs/Component.cpp
    ecs/ComponentStorage.cpp
    ecs/System.cpp
    ecs/SystemManager.cpp
    ecs/Archetype.cpp
    ecs/Query.cpp
    scene/Scene.cpp
    scene/SceneManager.cpp
    scene/SceneTransition.cpp
    scene/SceneNode.cpp
    scene/SceneSerializer.cpp
    ui/UIWidget.cpp
    ui/UIButton.cpp
    ui/UILabel.cpp
    ui/UIPanel.cpp
    ui/UISlider.cpp
    ui/UITextBox.cpp
    ui/UICheckbox.cpp
    ui/UIImage.cpp
    ui/UIManager.cpp
    ui/UILayout.cpp
    ui/UIStyle.cpp
    math/Vector2.cpp
    math/Vector3.cpp
    math/Vector4.cpp
    math/Matrix3.cpp
    math/Matrix4.cpp
    math/Quaternion.cpp
    math/MathUtil.cpp
    math/Random.cpp
    math/Rect.cpp
    math/Transform.cpp
    utils/FileSystem.cpp
    utils/JSON.cpp
    utils/XMLParser.cpp
    utils/Serializer.cpp
    utils/ResourceManager.cpp
    utils/PoolAllocator.cpp
    utils/Timer.cpp
    utils/StringUtil.cpp
    networking/NetworkManager.cpp
    networking/TCPSocket.cpp
    networking/UDPSocket.cpp
    networking/Packet.cpp
    networking/NetworkMessage.cpp
)

target_include_directories(nebula_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${SFML_INCLUDE_DIR})
target_link_libraries(nebula_core PUBLIC ${SFML_LIBRARIES})
